# optimization

./: .gitignore
01/: BenchmarkMatrixMultiplication.ipynb  Makefile  profile.py  profiling.py
01/include/: bidim.h  config.h  scalar.h  size.h  static.h  timing.h  unidim.h
01/include/dyn/: bidim.h  unidim.h
01/scripts/: influences.xlsx  profile.py  requirements.txt  stats.py
01/src/bidim/: interchange.c  naive.c  unrolling.c
01/src/dyn/bidim/: interchange.c  naive.c  unrolling.c
01/src/dyn/unidim/: interchange.c  naive.c  unrolling.c
01/src/static/: interchange.c  naive.c  unrolling.c
01/src/unidim/: interchange.c  naive.c  unrolling.c
02/: Makefile
02/gprof/: profile.py
02/include/: array.h  cache.h  scalar.h  sort.h
02/scripts/: profile.py  requirements.txt
02/src/: main.c
03/scripts/: benchmark.py  requirements.txt
03/src/: fasta.c
04/: CMakeLists.txt  README.md
04/scripts/: build.bat  build.sh
04/src/: api.c  api.h  globals.h  log.c  log.h  main.c  math_utils.h  prelude.h  raycast.c  raycast.h  raycast_simd.c  raycast_simd.h  simd.h  sketch.c  vec.h  vec_simd.h
05/src/: accumulate.py  matmul.py  requirements.txt
